// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction renders a button only 1`] = `
<div
  className="callToAction buttonOnlyVariation"
  data-testid="call-to-action"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <a
        className="button large link primary responsive spacing"
        data-testid="button"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a large size 1`] = `
<div
  className="callToAction largeVariation"
  data-testid="call-to-action"
  id="call-to-action"
>
  <div
    className="image"
    style={
      Object {
        "backgroundImage": "url(http://example.com/someImage.jpg)",
      }
    }
    title="alt text for image"
  />
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div>
      <hr
        className="dash dash"
        style={
          Object {
            "width": "29px",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        data-testid="button"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a medium size 1`] = `
<div
  className="callToAction mediumVariation"
  data-testid="call-to-action"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div>
      <hr
        className="dash dash"
        style={
          Object {
            "width": "29px",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        data-testid="button"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a small size 1`] = `
<div
  className="callToAction smallVariation"
  data-testid="call-to-action"
  id="call-to-action"
>
  <div
    className="content"
  >
    <div
      className="column"
    >
      <h3>
        This is the headline for the CTA.
      </h3>
    </div>
    <div
      className="column"
    >
      <a
        className="button alternate large link primary responsive spacing"
        data-testid="button"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;
